--- a/EasyLife/iPhone.storyboard
+++ b/EasyLife/iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kpf-gb-vsj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kpf-gb-vsj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -17,26 +17,66 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxs-nk-IyG">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="400"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEK-8L-Mb5">
+                                <rect key="frame" x="0.0" y="464" width="320" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="Ii0-v8-fTl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Calculate !"/>
+                                <connections>
+                                    <segue destination="YfK-ZZ-xt1" kind="push" id="ydK-ih-Kgw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Qxs-nk-IyG" firstAttribute="top" secondItem="Yfe-yQ-YUj" secondAttribute="top" id="3Vo-fq-Zg8"/>
-                            <constraint firstAttribute="trailing" secondItem="Qxs-nk-IyG" secondAttribute="trailing" id="9X7-cb-mbl"/>
-                            <constraint firstItem="Qxs-nk-IyG" firstAttribute="leading" secondItem="Yfe-yQ-YUj" secondAttribute="leading" id="9dg-js-Mqv"/>
-                            <constraint firstAttribute="bottom" secondItem="Qxs-nk-IyG" secondAttribute="bottom" id="CW9-az-47e"/>
+                            <constraint firstItem="Qxs-nk-IyG" firstAttribute="leading" secondItem="Yfe-yQ-YUj" secondAttribute="leading" id="097-qw-hxS"/>
+                            <constraint firstItem="9Oh-gG-Hec" firstAttribute="top" secondItem="WEK-8L-Mb5" secondAttribute="bottom" id="7Rk-5I-55x"/>
+                            <constraint firstItem="WEK-8L-Mb5" firstAttribute="leading" secondItem="Yfe-yQ-YUj" secondAttribute="leading" id="DI4-5h-Kit"/>
+                            <constraint firstItem="WEK-8L-Mb5" firstAttribute="top" secondItem="Qxs-nk-IyG" secondAttribute="bottom" id="KvE-TA-eyi"/>
+                            <constraint firstAttribute="trailing" secondItem="WEK-8L-Mb5" secondAttribute="trailing" id="oEa-uS-TgD"/>
+                            <constraint firstItem="Qxs-nk-IyG" firstAttribute="top" secondItem="3kQ-Sa-WcI" secondAttribute="bottom" id="qpN-Pg-XfO"/>
+                            <constraint firstAttribute="trailing" secondItem="Qxs-nk-IyG" secondAttribute="trailing" id="tr9-WY-aMd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Expense Divider" id="lMQ-7g-MbR"/>
+                    <navigationItem key="navigationItem" title="Expense Divider" id="lMQ-7g-MbR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4LE-4h-AVt">
+                            <connections>
+                                <action selector="addNewSingleRecordView:" destination="GBg-Ng-o8A" id="bx4-rm-Zl6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="calculateButton" destination="WEK-8L-Mb5" id="tKf-br-CwI"/>
                         <outlet property="dividerScrollView" destination="Qxs-nk-IyG" id="KzU-sh-Bk3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TP4-KK-5lz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1839" y="-1020"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jkn-OD-d5M">
+            <objects>
+                <viewController id="YfK-ZZ-xt1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QAJ-EA-9bQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="nsN-as-Onl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HvW-AA-7NS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KHM-uO-ngr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uJJ-lH-qLm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2309" y="-1020"/>
         </scene>
         <!--Tips Cal View Controller - Calculate Tips-->
         <scene sceneID="T6y-rH-0hN">
